# rapcsv

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  pyproject.toml  test_aiocsv_compatibility.py  test_rapcsv.py
.github/workflows/: CI.yml  publish-existing.yml  publish.yml  security.yml
benchmarks/: bench_rapcsv.py
docs/: ROADMAP.md  conf.py  index.rst
rapcsv/: __init__.py  _rapcsv.pyi
scripts/: check_metadata.py
src/: lib.rs
tests/: test_docstring_examples.py  test_documentation_examples.py  test_file_handles.py  test_phase2_features.py  test_rapcsv.py  test_rapfiles_compatibility.py
