[package]
name = "rapcsv"
version = "0.0.1"
edition = "2021"
authors = ["RAP Project"]
license = "MIT"
description = "Streaming async CSV — no fake async, no GIL stalls."
repository = "https://github.com/rap-project/rapcsv"

[lib]
name = "rapcsv"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.35", features = ["full", "fs", "io-util"] }
csv = "1.3"

[features]
extension-module = ["pyo3/extension-module"]
default = []

